--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,9 @@ pipeline:
       - go test
   publish:
     image: plugins/docker:17.12
-    username: ${DOCKER_HUB_USERNAME}
-    password: ${DOCKER_HUB_PASSWORD}
+    username: 
+      from_secret: ${DOCKER_HUB_USERNAME}
+    password: 
+      from_secret: ${DOCKER_HUB_PASSWORD}
     repo: kkthnxbye/jenkinsgolang101
     tags: latest
