--- a/.drone.yml
+++ b/.drone.yml
@@ -3,17 +3,21 @@ workspace:
   path: src/github.com/andresr19/jenkins101golang
 
 pipeline:
+  prev:
+    commands:
+      - echo ${DOCKER_HUB_USERNAME}
+      - echo ${DOCKER_HUB_PASSWORD}
   build:
     image: golang
     commands:
       - go get
       - go build
       - go test
-  publish:
-    image: plugins/docker:17.12
-    username: 
-      from_secret: ${DOCKER_HUB_USERNAME}
-    password: 
-      from_secret: ${DOCKER_HUB_PASSWORD}
-    repo: kkthnxbye/jenkinsgolang101
-    tags: latest
+  # publish:
+  #   image: plugins/docker:17.12
+  #   username: 
+  #     from_secret: ${DOCKER_HUB_USERNAME}
+  #   password: 
+  #     from_secret: ${DOCKER_HUB_PASSWORD}
+  #   repo: kkthnxbye/jenkinsgolang101
+  #   tags: latest
