--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ pipeline:
       - go get
       - go build
       - go test
+      - echo "test echo"
       - echo ${DOCKER_HUB_USERNAME}
       - echo ${DOCKER_HUB_PASSWORD}
   # publish:
