--- a/.drone.yml
+++ b/.drone.yml
@@ -9,14 +9,8 @@ pipeline:
       - go get
       - go build
       - go test
-      - echo "test echo"
-      - echo DOCKER_HUB_USERNAME
-      - echo ${DOCKER_HUB_PASSWORD}
-  # publish:
-  #   image: plugins/docker:17.12
-  #   username: 
-  #     from_secret: ${DOCKER_HUB_USERNAME}
-  #   password: 
-  #     from_secret: ${DOCKER_HUB_PASSWORD}
-  #   repo: kkthnxbye/jenkinsgolang101
-  #   tags: latest
+  publish:
+    image: plugins/docker:17.12
+    secrets: [ DOCKER_HUB_USERNAME, DOCKER_HUB_PASSWORD ]
+    repo: kkthnxbye/jenkinsgolang101
+    tags: latest
