--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ pipeline:
       - go build
       - go test
   publish:
-    image: plugins/docker:17.12
+    image: plugins/docker
     secrets: [ DOCKER_HUB_USERNAME, DOCKER_HUB_PASSWORD ]
     repo: kkthnxbye/jenkinsgolang101
     tags: latest
