--- a/.drone.yml
+++ b/.drone.yml
@@ -9,15 +9,9 @@ pipeline:
       - go get
       - go build
       - go test
-  # publish:
-  #   image: plugins/docker
-  #   secrets: [ DOCKER_HUB_USERNAME, DOCKER_HUB_PASSWORD ]
-  #   repo: kkthnxbye/jenkinsgolang101
-  #   tags: latest
   publish:
-    image: docker
-    secrets: [DOCKER_HUB_USERNAME,DOCKER_HUB_PASSWORD]
-    commands:
-        - docker login --username=$DOCKER_HUB_USERNAME --password=$DOCKER_HUB_PASSWORD
-        - docker build -t kkthnxbye/jenkinsgolang101:latest .
-        - docker push kkthnxbye/jenkinsgolang101:latest
+    image: plugins/docker
+    secrets: [ DOCKER_HUB_USERNAME, DOCKER_HUB_PASSWORD ]
+    repo: kkthnxbye/jenkinsgolang101
+    tags: latest
+    previleged: true
