--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ pipeline:
       - go test
   publish:
     image: plugins/docker
-    secrets: [ DOCKER_HUB_USERNAME, DOCKER_HUB_PASSWORD ]
+    secrets: [ "kkthnxbye", "whycry2018" ]
     repo: kkthnxbye/jenkinsgolang101
     tags: latest
     debug: true
