--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build:
     docker: # use the docker executor type; machine and macos executors are also supported
       - image: circleci/golang # the primary container, where your job's commands are run
+    working_directory: /go/src/github.com/andresr19/jenkins101golang
     steps:
       - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+      - run: go get
+      - run: go build
+      - run: go test
