--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,3 +9,11 @@ jobs:
       - run: go get
       - run: go build
       - run: go test
+      - deploy:
+          name: Push
+          command: |
+            docker login --username $dockerhub_username --password $dockerhub_password
+              # docker tag dockerapp_dockerapp $dockerhub_username/dockerapp:$CIRCLE_SHA1
+              # docker tag dockerapp_dockerapp $dockerhub_username/dockerapp:latest
+              docker push $dockerhub_username/jenkinsgolang101:$CIRCLE_SHA1
+              docker push $dockerhub_username/jenkinsgolang101:latest
