--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker: # use the docker executor type; machine and macos executors are also supported
       - image: circleci/golang # the primary container, where your job's commands are run
+      - image: docker:latest
     working_directory: /go/src/github.com/andresr19/jenkins101golang
     steps:
       - checkout # check out the code in the project directory
