--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     working_directory: /go/src/github.com/andresr19/jenkins101golang
     steps:
       - checkout # check out the code in the project directory
+      - setup_remote_docker
       - run: go get
       - run: go build
       - run: go test
